# pg-pub-backend

./: .env  Cargo.toml  README.md  cert.pem  diesel.toml  key.pem
migrations/2026-03-16-161925-0000_users/: up.sql
migrations/2026-04-27-155317-0000_users/: down.sql  up.sql
migrations/2026-06-16-155450-0000_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/program/: config.rs  endpoints.rs  handlers.rs  mod.rs  model.rs  schema.rs  services.rs  user_model.rs
src/program/book/: book_handlers.rs  book_model.rs  mod.rs  transformer.rs
src/program/post/: mod.rs  post_handlers.rs  post_model.rs
src/program/user/: mod.rs  user_handlers.rs  user_model.rs  user_services.rs
