[package]
name = "pg-back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.13.0"
chrono = "0.4.44"
serde = { version = "1.0", features = ["derive"] }
argon2 = { version = "0.5.3", features = ["std"] }
json-web-token = "0.2.0"
env_logger = "0.11.9"
jsonwebtoken = "9.3.0"
actix-cors = "0.7.1"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
diesel = {version = "2.2.2", features = ["r2d2", "postgres", "uuid"]}
