[package]
name = "pg-back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.13.0", features = ["rustls-0_23"] }
actix-multipart = "0.7"
actix-cors = "0.7.1"
actix-tls = "3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = "9.3.0"
env_logger = "0.11.9"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
diesel = {version = "2.2.2", features = ["r2d2", "postgres", "uuid", "chrono"]}

rustls = "0.23"
rustls-pemfile = "2"
async-stripe = { version = "0.31", features = ["runtime-tokio-hyper"] }

tokio = { version = "1", features = ["full"] }
tempfile = "3"
futures-util = "0.3"